style/main.css
/*
 * Style for the LINCS-DCIC website.
 */
/* LESS variables
 * ------------------------------------------------------------------------- */
/* colors */
/* Logo and accent colors */
/* fonts */
/* Specific variables. */
/* Sticky Footer. Do not change.
 * ----------------------------- */
html {
  position: relative;
  min-height: 100%;
}
body {
  margin-bottom: 200px;
  /* bottom = footer height */
}
#footer {
  position: absolute;
  left: 0;
  bottom: 0;
  height: 200px;
  width: 100%;
}
/* Tag selectors, i.e. global settings.
 * ------------------------------------------------------------------------- */
html,
body {
  font-family: 'Arial', sans-serif;
}
a {
  /* Set default to override Bootstrap's default. */
  /*color: #000000;*/
  color: #3593b1;
}

a:hover {
  color: #09505b;
  text-decoration: underline;
}

a:active,
a:link,
a:visited {
  /*color: #09505b;*/
  /*text-decoration: underline;*/
  /*color: #000000;*/
  /*cursor: pointer;*/
  /*text-decoration: none;*/
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: 'Archivo Narrow', 'Helvetica Neue', 'Arial', sans-serif;
}
.left {
  float: left;
}
.right {
  float: right;
}
.clear {
  clear: both;
}
.btn {
  border: 1px solid #f1f1f1;
  border-radius: 0;
}
.underline {
  text-decoration: underline;
}
.instruction {
  font-style: italic;
}
.loader {
  background: rgba(255, 255, 255, 0.8);
  position: fixed;
  height: 100%;
  width: 100%;
  overflow: hidden;
  padding-top: 25%;
  font-size: 30px;
  top: 0;
  left: 0;
  text-align: center;
}
/* Bootstrap overrides
 * ------------------------------------------------------------------------- */
.navbar {
  border-radius: 0;
}
.navbar-nav > li > .dropdown-menu {
  border-radius: 0;
}
/* Structal elements: wrapper, header, footer, and related content.
 * ------------------------------------------------------------------------- */
#header {
  border-bottom: 1px solid #f1f1f1;
}
#wrapper {
  padding-bottom: 50px;
}
#content-wrapper #index img.icon {
  padding: 10px;
  width: 100px;
}
#content-wrapper #index h2 {
  margin-top: 0;
}
#content-wrapper #index .section {
  font-size: 16px;
  padding-bottom: 20px;
}
#footer {
  background: #444;
  height: 200px;
  padding: 30px 0;
}
#footer a,
#footer p {
  color: #ffffff;
  font-size: 13px;
}
#footer a:hover {
  color: #599fb7;
}
#footer h4 {
  color: #ffffff;
  border-bottom: 1px solid #666;
  padding-bottom: 5px;
}
#footer ul {
  list-style-type: none;
  padding: 0;
}
#footer #social a {
  border: none;
  border-radius: 0;
}
#footer #social img {
  width: 30px;
}
#footer #social li {
  padding-right: 0;
  padding-left: 3px;
}
#footer #social .research-gate {
  padding: 0;
}
/* Category content is related but varies in style. "index-page" refers
 * to content on the main page. "catgory-page" refers to content on
 * individual pages.
 * ------------------------------------------------------------------------- */
#index-page ol,
.category-page ol,
#index-page ul,
.category-page ul {
  padding: 0 0 0 15px;
}
#index-page li,
.category-page li {
  list-style-type: none;
}
#index-page li a,
.category-page li a {
  /* Color on the main page is black; on individual pages it is accent. */
}
#index-page li a:hover,
.category-page li a:hover {
  cursor: pointer;
}
#index-page li:before,
.category-page li:before {
  /* FontAwesome char code inside the '' */
  content: '\F105';
  color: #222222;
  font-family: 'FontAwesome';
  display: inline-block;
  width: 1.2em;
  margin-left: -1.5em;
  padding-left: 6px;
}
.category-page a {
  /*color: #3593b1;*/
}
.category-page a:hover {
  /*color: #09505b;*/
  /*text-decoration: underline;*/
}
.category-page#analysis {
  margin-top: 20px;
}
.category-page#analysis .col-md-4 textarea {
  height: 200px;
  width: 100%;
}
.category-page#analysis .col-md-8 input,
.category-page#analysis .col-md-8 textarea {
  margin-bottom: 10px;
  width: 100%;
}
.category-page#analysis .submitted {
  position: absolute;
  padding: 1.6em;
  background-color: rgba(255, 255, 255, 0.9);
  left: 3em;
}
.category-page#analysis #example {
  color: #808080;
  font-size: 13px;
}
.category-page #news .first img {
  float: left;
  padding-right: 10px;
  width: 30%;
}
.category-page #news .first a {
  font-family: 'Archivo Narrow', 'Helvetica Neue', 'Arial', sans-serif;
  font-size: 20px;
}
.category-page #news .first .details {
  float: right;
  width: 70%;
}
.category-page#edsrapp table {
  border-bottom: 1px solid #dddddd;
}
.category-page#edsrapp tr {
  height: 30px;
}
.category-page#edsrapp tr td:first-child {
  font-weight: bold;
  width: 30%;
}
.category-page#edsrapp tr td:last-child {
  width: 100%;
}
.category-page#edsrapp tr td:last-child input {
  width: 100%;
}
.category-page#edsrapp #datepicker-wrapper span {
  font-weight: bold;
  /*width: 50%;*/
}
.category-page#edsrapp #datepicker-wrapper td {
  width: auto;
}
.category-page#edsrapp #datepicker-wrapper td input {
  width: auto;
}
.category-page#edsrapp #submit {
  background: #3593b1;
  border: none;
  color: #ffffff;
  font-weight: bold;
  margin-top: 20px;
}
.category-page#edsrapp #submit:hover {
  background: #09505b;
}
.category-page .sections {
  padding-top: 20px;
}
.category-page .sections .section {
  padding-bottom: 20px;
}
.category-page .sections .section h3 {
  margin-top: 0;
}
.category-page .sections .section img,
.category-page .sections .section .text {
  float: left;
}
.category-page .sections .section img {
  width: 20%;
}
.category-page .sections .section .text {
  padding-left: 20px;
  width: 80%;
}
.category-page .publication,
.category-page .newsStory,
.category-page .event {
  padding-bottom: 20px;
}
.category-page .publication p,
.category-page .newsStory p,
.category-page .event p {
  margin: 0;
}
.category-page .publication .title,
.category-page .newsStory .title,
.category-page .event .title {
  font-size: 16px;
}
.category-page #calendar section:first-of-type {
  border-bottom: 1px solid #dddddd;
}
.category-page #team .pi {
  /* This is for when the page is collapsed. */
  padding-top: 10px;
}
.category-page #team .contact-institution-logo-row {
  margin-bottom: 10px;
}
.category-page #team .contact-institution-logo {
  height: 80px;
  display: block;
  margin-bottom: 15px;
}
.category-page #team .contact-pi-logo {
  height: 80px;
}
.category-page #team .contact-pi-desc {
  margin-left: 10px;
  vertical-align: middle;
  display: inline-block;
}
.category-page #team .contact-header {
  border-bottom: 1px solid #888888;
  /*text-transform: uppercase;*/
  margin-top: 15px;
}
.category-page #team .contact-researchers {
  margin-bottom: 10px;
}
.category-page #team .person {
  float: left;
  padding-top: 10px;
}
.category-page #team h4 {
  font-weight: bold;
}
.category-page#summer-fellows-2015 h3 {
  margin-top: 0;
}
.category-page#summer-fellows-2015 h4 {
  margin-bottom: 0;
}
.category-page#summer-fellows-2015 .project {
  margin-bottom: 0;
}
.category-page#internal-dsrp img {
  width: 100%;
}
.category-page#internal-dsrp .caption {
  font-size: 12px;
  font-style: italic;
  margin-top: 15px;
}
.category-page#internal-dsrp section {
  margin-top: 10px;
}
.category-page#workshops-etc section {
  margin-bottom: 20px;
}
.category-page#seminar-series table p {
  margin: 0;
}
.category-page#mini-symposium section {
  border-top: 1px solid #dddddd;
  padding: 10px 0;
}
.category-page#mini-symposium section h4,
.category-page#mini-symposium section p {
  margin: 0;
}
.right-nav img {
  width: 100%;
}
.highlight {
  color: #ff0000;
}

/* Miscellaneous global selectors.
 * ------------------------------------------------------------------------- */
.super {
  font-size: .75em;
  vertical-align: super;
}
a.important,
.important {
  font-style: normal;
  font-weight: bold;
  color: #d16291 !important;
}
a.important a,
.important a {
  color: #d16291 !important;
}
a.important a:hover,
.important a:hover {
  color: #599fb7 !important;
}
.clear {
  clear: both;
}

